syntax = "proto3";

package pb;

service DataNode{
    rpc UploadChunks(stream Chunk) returns (Response);
    rpc DownloadChunks(RequestChunk) returns (Chunk);
    rpc ProposalRequest(Empty) returns (Response);
}

service NameNode{
    rpc FinalProposal(Proposal) returns (Empty);
    rpc FileRequest(Empty) returns (stream File);
    rpc AddressRequest(File) returns (ChunkAddress);
}

message Empty{
}

message Response{
    string response = 1;
}

message Proposal{
    string fileName = 1;
    string chunksDn1 = 2;
    string chunksDn2 = 3;
    string chunksDn3 = 4;
}

message Chunk{
    string chunk_id = 1;
    bytes chunk = 2;
}

message RequestChunk{
    string chunkId = 1;
}

message File{
    string fileName = 1;
}

message ChunkAddress{
    repeated string ip = 1;
}